Hero overflow pseudoelement fixed

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	inset-block-start: 0;
 	inset-inline: 0;
+	z-index: 1;
 }
 
 .header__content {
